--- a/index.html
+++ b/index.html
@@ -810,6 +810,65 @@
                 transition: none;
             }
         }
+
+        /* Стили для мобильного уведомления */
+        .mobile-notice {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(10px);
+            padding: 15px 20px;
+            border-radius: 12px;
+            color: white;
+            text-align: center;
+            font-size: 14px;
+            max-width: 280px;
+            z-index: 1000;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        /* Медиа-запрос для мобильных устройств */
+        @media screen and (max-width: 768px) {
+            /* Скрываем портфолио на мобильных */
+            .portfolio-card {
+                display: none !important;
+            }
+
+            /* Отключаем трансформацию при клике на портфолио */
+            .show-portfolio .cards-wrapper {
+                transform: none !important;
+            }
+
+            .show-portfolio .profile-card {
+                transform: none !important;
+                opacity: 1 !important;
+                display: block !important;
+            }
+
+            /* Показываем уведомление при клике на портфолио */
+            .mobile-notice {
+                display: none;
+                animation: fadeIn 0.3s ease-out;
+            }
+
+            .mobile-notice.show {
+                display: block;
+            }
+
+            @keyframes fadeIn {
+                from {
+                    opacity: 0;
+                    transform: translate(-50%, 20px);
+                }
+                to {
+                    opacity: 1;
+                    transform: translate(-50%, 0);
+                }
+            }
+        }
     </style>
     <script src="stars.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
