--- a/index.html
+++ b/index.html
@@ -830,6 +830,15 @@
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
+        /* Стили для мобильного уведомления */
+        .mobile-portfolio-notice {
+            display: none;
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 12px;
+            margin-top: 8px;
+            text-align: center;
+        }
+
         /* Медиа-запрос для мобильных устройств */
         @media screen and (max-width: 768px) {
             /* Скрываем портфолио на мобильных */
@@ -837,36 +846,15 @@
                 display: none !important;
             }
 
-            /* Отключаем трансформацию при клике на портфолио */
-            .show-portfolio .cards-wrapper {
-                transform: none !important;
-            }
-
-            .show-portfolio .profile-card {
-                transform: none !important;
-                opacity: 1 !important;
-                display: block !important;
-            }
-
-            /* Показываем уведомление при клике на портфолио */
-            .mobile-notice {
-                display: none;
-                animation: fadeIn 0.3s ease-out;
-            }
-
-            .mobile-notice.show {
+            /* Показываем уведомление */
+            .mobile-portfolio-notice {
                 display: block;
             }
 
-            @keyframes fadeIn {
-                from {
-                    opacity: 0;
-                    transform: translate(-50%, 20px);
-                }
-                to {
-                    opacity: 1;
-                    transform: translate(-50%, 0);
-                }
+            /* Отключаем действие кнопки портфолио */
+            .tag[onclick] {
+                pointer-events: none;
+                opacity: 0.7;
             }
         }
     </style>
@@ -892,6 +880,9 @@
                     </div>
                     <div class="tags">
                         <a href="#" class="tag" onclick="togglePortfolio(event)">PORTFOLIO</a>
+                    </div>
+                    <div class="mobile-portfolio-notice">
+                        Portfolio is available only in desktop version
                     </div>
                     <div class="location">
                         <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
